fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@
 }
 
 body {
-  background: #000000;
+  background: #e6e7e9;
   color: var(--foreground);
   transition:
     background-color 0.5s ease,
